2013-07-02  Paul Eggert  <eggert@cs.ucla.edu>

	Don't convert function pointers to void * and back.
	It isn't portable C, and it's easy enough to avoid.
	* alloc.c: Verify SAVE_FUNCPOINTER bits, too.
	(make_save_value): Add support for SAVE_FUNCPOINTER.
	* keymap.c (map_keymap_char_table_item, map_keymap_internal):
	* print.c (print_object):
	Distinguish function from object pointers.
	* lisp.h (SAVE_FUNCPOINTER): New constant.
	(SAVE_SLOT_BITS): Adjust to it.
	(SAVE_TYPE_FUNCPTR_PTR_OBJ): New constant, replacing
	SAVE_TYPE_PTR_PTR_OBJ.  Change the only use.
	(voidfuncptr): New typedef.
	(struct Lisp_Save_Value): New member data[0].funcpointer.
	(XSAVE_FUNCPOINTER): New function.

	Simplify buildobj processing.
	* Makefile.in (buildobj.h): Make it a sequence of strings each
	followed by comma, rather than a single string.  Put it into a
	.tmp file in case there's an error while generating it.
	(gl-stamp): Use .tmp for temp files.
	(mostlyclean): Clean .tmp files.
	* doc.c (buildobj): Move to just the routine that needs it.
	It's now an array of strings, so processing is simpler.

2013-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	Fix bug re noninteractive multithreaded memory allocation (Bug#14569).
	* emacs.c (malloc_enable_thread): Hoist extern decl to top level.
	(main) [HAVE_PTHREAD && !SYSTEM_MALLOC && !DOUG_LEA_MALLOC]:
	Invoke malloc_enable_thread even when not interactive.
	Problem reported by Ken Brown in <http://bugs.gnu.org/14569#275>.
	* process.c (init_process_emacs) [CYGWIN]: Tickle glib even
	in this case, since the underlying bug has now been fixed.

2013-07-01  Juanma Barranquero  <lekktu@gmail.com>

	* emacs.c (Fkill_emacs): Expand Vauto_save_list_file_name before
	unlinking it (bug#14691).

2013-06-30  Michal Nazarewicz  <mina86@mina86.com>

	* buffer.c (FKill_buffer): Run `kill-buffer-query-functions'
	before checking whether buffer is modified.  This lets
	`kill-buffer-query-functions' cancel killing of the buffer or save